--- a/gasreserves/index.html
+++ b/gasreserves/index.html
@@ -41,7 +41,16 @@
 			opacity: 0.7;
 		}
 	</style>
-</head>
+	<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-42977639-1', 'edip-maps.net');
+			ga('send', 'pageview');
+		</script>
+	</head>
 <body>
 	<div id="map"></div>
 	<script src="../../lib/Leaflet-0.6.1/dist/leaflet.js"></script>
