--- a/map.html
+++ b/map.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Energy Data - Gas Consumption & Production</title>
+	<title>Energy Data Prototype</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<link rel="stylesheet" href="../../lib/Leaflet-0.6.1/dist/leaflet.css" />
-	<link rel="shortcut icon" href="../../img/eDip_logo.png" />
+	<link rel="stylesheet" href="../lib/Leaflet-0.6.1/dist/leaflet.css" />
+	<link rel="shortcut icon" href="../img/eDip_logo.png" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="../dist/leaflet.ie.css" /><![endif]-->
 	<style>
 		body {
@@ -41,25 +41,24 @@
 			opacity: 0.7;
 		}
 	</style>
-	<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-42977639-1', 'edip-maps.net');
-			ga('send', 'pageview');
-		</script>
-	</head>
+</head>
 <body>
 	<div id="map"></div>
-	<script src="../../lib/Leaflet-0.6.1/dist/leaflet.js"></script>
+	<script src="../lib/Leaflet-0.6.1/dist/leaflet.js"></script>
 	<script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.2"></script>
-	<script type="text/javascript" src="../data/Global_Energy_Data_110m_OS2000.js"></script>
-	<script type="text/javascript" src="../data/Global_Energy_Data_110m_OC2000.js"></script>
-	<script type="text/javascript" src="../data/Global_Energy_Data_110m_OS2010.js"></script>
-	<script type="text/javascript" src="../data/Global_Energy_Data_110m_OC2010.js"></script>
-	<script type="text/javascript" src="../data/oil_pipelines.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_OS2000.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_OC2000.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_OR2000.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_GC2000.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_GS2000.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_GR2000.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_OS2010.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_OC2010.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_OR2010.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_GC2010.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_GS2010.js"></script>
+	<script type="text/javascript" src="data/Global_Energy_Data_110m_GR2010.js"></script>
+	<script type="text/javascript" src="data/oil_pipelines.js"></script>
 	<script type="text/javascript">
 
 		/*
@@ -97,12 +96,20 @@
 			//cmAttr = 'Data: <a href="http://www.eia.gov/countries/data.cfm" title="U.S. Energy Information Administration">EIA</a>, <a href="http://www.openstreetmap.org/" title="&copy; OpenStreetMap contributors">OpenStreetMap</a>, <a href="http://www.cloudmade.com/" title="&copy; 2011 CloudMade">CloudMade</a>, <a href="http://www.stamen.com/" title="Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under CC BY SA.">Stamen Design</a>',
 			cmUrl = 'http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/{styleId}/256/{z}/{x}/{y}.png';
 		
-	    var OC2000, OS2000, OC2010, OS2010;
+	    var OC2000, OS2000, OR2000, GC2000, GS2000, GR2000, OC2010, OS2010, OR2010, GC2010, GS2010, GR2010;
 		
 		OC2000 = L.geoJson(oc2000Data, {style: styleOC2000,onEachFeature: onEachFeature, attribution: cmAttr}),
 		OC2010 = L.geoJson(oc2010Data, {style: styleOC2010,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GC2000 = L.geoJson(gc2000Data, {style: styleGC2000,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GC2010 = L.geoJson(gc2010Data, {style: styleGC2010,onEachFeature: onEachFeature, attribution: cmAttr}),
 		OS2000 = L.geoJson(os2000Data, {style: styleOS2000,onEachFeature: onEachFeature, attribution: cmAttr}),
 		OS2010 = L.geoJson(os2010Data, {style: styleOS2010,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GS2000 = L.geoJson(gs2000Data, {style: styleGS2000,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GS2010 = L.geoJson(gs2010Data, {style: styleGS2010,onEachFeature: onEachFeature, attribution: cmAttr}),
+		OR2000 = L.geoJson(or2000Data, {style: styleOR2000,onEachFeature: onEachFeature, attribution: cmAttr}),
+		OR2010 = L.geoJson(or2010Data, {style: styleOR2010,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GR2000 = L.geoJson(gr2000Data, {style: styleGR2000,onEachFeature: onEachFeature, attribution: cmAttr}),
+		GR2010 = L.geoJson(gr2010Data, {style: styleGR2010,onEachFeature: onEachFeature, attribution: cmAttr}),
 		pipelines = L.geoJson(pipelinesData, {style: stylePipelines, attribution: cmAttr});
 		
 		var minimal   = L.tileLayer(cmUrl, {styleId: 22677, attribution: cmAttr}),
@@ -113,42 +120,98 @@
 		
 		// get color depending on OC11 value
 		function getColorAll(d) {
-			return d > 4999		?	'#800026' :
-			       d > 3499		?	'#BD0026' :
-				   d > 2499		?	'#E31A1C' :
-			       d > 1999		?	'#FC4E2A' :
-			       d > 999		?	'#FD8D3C' :
-			       d > 499		?	'#FEB24C' :
-			       d > 199		?	'#FED976' :
-			       d > 0		?	'#FFEDA0' :
-									'#CCCCCC' ;
+			return d > 9999	?	'#800026' :
+			       d > 4999 ?	'#BD0026' :
+			       d > 999  ?	'#E31A1C' :
+			       d > 499	?	'#FC4E2A' :
+			       d > 249	?	'#FD8D3C' :
+			       d > 124	?	'#FEB24C' :
+			       d > 0	?	'#FED976' :
+								'#ddd';
 		}
 		
 		function getColorOC(d) {
-			return d > 4999		?	'#800026' :
-			       d > 3499		?	'#BD0026' :
-				   d > 2499		?	'#E31A1C' :
-			       d > 1999		?	'#FC4E2A' :
-			       d > 999		?	'#FD8D3C' :
-			       d > 499		?	'#FEB24C' :
-			       d > 199		?	'#FED976' :
-			       d > 0		?	'#FFEDA0' :
-									'#CCCCCC' ;
+			return d > 20000	? 	'#800026' :
+			       d > 15000	? 	'#BD0026' :
+			       d > 10000	? 	'#E31A1C' :
+			       d > 5000		? 	'#FC4E2A' :
+			       d > 2500		? 	'#FD8D3C' :
+			       d > 1000		? 	'#FEB24C' :
+			       d > 500		? 	'#FED976' :
+			       d > 1		? 	'#FFEDA0' :
+									'#CCCCCC';
 		}
 		
-		function getColorOS(d) {
-			return d > 4999		?	'#800026' :
-			       d > 3499		?	'#BD0026' :
-				   d > 2499		?	'#E31A1C' :
-			       d > 1999		?	'#FC4E2A' :
-			       d > 999		?	'#FD8D3C' :
-			       d > 499		?	'#FEB24C' :
-			       d > 199		?	'#FED976' :
-			       d > 0		?	'#FFEDA0' :
-									'#CCCCCC' ;
+		function getColorOR(d) {
+			return d > 2000	?	'#800026' :
+			       d > 1500	?	'#BD0026' :
+			       d > 1000	?	'#E31A1C' :
+			       d > 500	?	'#FC4E2A' :
+			       d > 250	?	'#FD8D3C' :
+			       d > 100	?	'#FEB24C' :
+			       d > 50	?	'#FED976' :
+			       d > 1	?	'#FFEDA0' :
+								'#CCCCCC';
 		}
 
+		function getColorOS(d) {
+			return d > 2000	?	'#800026' :
+			       d > 1500	?	'#BD0026' :
+			       d > 1000	?	'#E31A1C' :
+			       d > 500	?	'#FC4E2A' :
+			       d > 250	?	'#FD8D3C' :
+			       d > 100	?	'#FEB24C' :
+			       d > 50	?	'#FED976' :
+			       d > 1	?	'#FFEDA0' :
+								'#CCCCCC';
+		}
+
+		function getColorGC(d) {
+			return d > 2000	?	'#800026' :
+			       d > 1500	?	'#BD0026' :
+			       d > 1000	?	'#E31A1C' :
+			       d > 500	?	'#FC4E2A' :
+			       d > 250	?	'#FD8D3C' :
+			       d > 100	?	'#FEB24C' :
+			       d > 50	?	'#FED976' :
+			       d > 1	?	'#FFEDA0' :
+								'#CCCCCC';
+		}
+		
+		function getColorGS(d) {
+			return d > 2000	?	'#800026' :
+			       d > 1500	?	'#BD0026' :
+			       d > 1000	?	'#E31A1C' :
+			       d > 500	?	'#FC4E2A' :
+			       d > 250	?	'#FD8D3C' :
+			       d > 100	?	'#FEB24C' :
+			       d > 50	?	'#FED976' :
+			       d > 1	?	'#FFEDA0' :
+								'#CCCCCC';
+		}
+		
+		function getColorGR(d) {
+			return d > 2000	?	'#800026' :
+			       d > 1500	?	'#BD0026' :
+			       d > 1000	?	'#E31A1C' :
+			       d > 500	?	'#FC4E2A' :
+			       d > 250	?	'#FD8D3C' :
+			       d > 100	?	'#FEB24C' :
+			       d > 50	?	'#FED976' :
+			       d > 1	?	'#FFEDA0' :
+								'#CCCCCC';
+		}
 		function styleOC2000(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+		
+		function styleOR2000(feature) {
 			return {
 				weight: 1,
 				opacity: 1,
@@ -168,7 +231,48 @@
 			};
 		}
 
+		function styleGC2000(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+		
+		function styleGS2000(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+
+		
+		function styleGR2000(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+
 		function styleOC2010(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+		
+		function styleOR2010(feature) {
 			return {
 				weight: 1,
 				opacity: 1,
@@ -187,6 +291,36 @@
 				fillColor: getColorAll(feature.properties.Value)
 			};
 		}
+		
+		function styleGC2010(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+		
+		function styleGS2010(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}
+		
+		function styleGR2010(feature) {
+			return {
+				weight: 1,
+				opacity: 1,
+				color: 'white',
+				fillOpacity: 0.7,
+				fillColor: getColorAll(feature.properties.Value)
+			};
+		}		
 		
 		function stylePipelines(feature) {
 			return {
@@ -222,9 +356,17 @@
 
 		function resetHighlight(e) {
 			OC2000.resetStyle(e.target);
+			OR2000.resetStyle(e.target);
 			OS2000.resetStyle(e.target);
+			GC2000.resetStyle(e.target);
+			GS2000.resetStyle(e.target);
+			GR2000.resetStyle(e.target);
 			OC2010.resetStyle(e.target);
+			OR2010.resetStyle(e.target);
 			OS2010.resetStyle(e.target);
+			GC2010.resetStyle(e.target);
+			GR2010.resetStyle(e.target);
+			GS2010.resetStyle(e.target);
 			info.update();
 		}
 
@@ -253,8 +395,16 @@
 		var dataLayers = {
 			"Petroleum Consumption (2000)":OC2000,
 			"Petroleum Consumption (2010)":OC2010,
+			"Gas Consumption (2000)":GC2000,
+			"Gas Consumption (2010)":GC2010,
 			"Total Oil Production (2000)":OS2000,
 			"Total Oil Production (2010)":OS2010,
+			"Total Gas Production (2000)":GS2000,
+			"Total Gas Production (2010)":GS2010,
+			"Crude Oil Reserves (2000)":OR2000,
+			"Crude Oil Reserves (2010)":OR2010,
+			"Gas Reserves (2000)":GR2000,
+			"Gas Reserves (2010)":GR2010
 		};
 
 		//If vector overlays such as roads, rivers, pipelines, etc are needed, add them here (AND add the layer group using using control.layers).
@@ -287,7 +437,7 @@
 		legend.onAdd = function (map) {
 
 			var div = L.DomUtil.create('div', 'info legend'),
-				grades = ['No data', 1, 200, 500, 1000, 2000, 2500, 3500, 5000],
+				grades = ['No data', 1, 125, 250, 500, 1000, 5000, 10000],
 				labels = [],
 				from, to;
 
